--- a/test.html
+++ b/test.html
@@ -14,9 +14,9 @@
         .product-details { flex: 1; }
         .product-name { font-size: 1.2em; margin: 0; }
         .product-description { font-size: 0.9em; color: #555; margin: 5px 0; }
-        .product-footer { display: flex; justify-content: space-between; align-items: center; }
+        .product-footer { display: flex; justify-content: space-between; align-items: center; margin-top: 10px; }
         .product-price { font-size: 1em; font-weight: bold; }
-        .cart-btn { background-color: green; color: white; border: none; padding: 5px 10px; cursor: pointer; }
+        .cart-btn { background-color: #26d48c; color: white; border: none; padding: 8px 20px; border-radius: 50px; cursor: pointer; text-align: center; }
         .cart-btn:disabled { background-color: gray; cursor: not-allowed; }
         #cart-container { margin-top: 20px; }
         #total-price { font-weight: bold; }
@@ -34,94 +34,83 @@
 
     <script>
         const products = [
-            { id: 1, name: "1kVA Inverter", price: 140000 },
-            { id: 2, name: "1.5kVA Inverter", price: 180000 },
-            { id: 3, name: "2kVA Inverter", price: 230000 },
-            { id: 4, name: "2.5kVA Inverter", price: 290000 },
-            { id: 5, name: "3kVA Inverter", price: 390000 },
-            { id: 6, name: "3.5kVA Inverter", price: 450000 },
-            { id: 7, name: "5kVA Inverter", price: 650000 },
-            { id: 8, name: "7.5kVA Inverter", price: 1200000 },
-            { id: 9, name: "10kVA Inverter", price: 1400000 },
-            { id: 10, name: "100W Solar Panel", price: 37000 },
-            { id: 11, name: "180W Solar Panel", price: 48000 },
-            { id: 12, name: "200W Solar Panel", price: 50000 },
-            { id: 13, name: "250W Solar Panel", price: 70000 },
-            { id: 14, name: "280W Solar Panel", price: 75000 },
-            { id: 15, name: "300W Solar Panel", price: 80000 },
-            { id: 16, name: "330W Solar Panel", price: 90000 },
-            { id: 17, name: "350W Solar Panel", price: 100000 },
-            { id: 18, name: "450W Solar Panel", price: 120000 },
-            { id: 19, name: "480W Solar Panel", price: 115000 },
-            { id: 20, name: "550W Solar Panel", price: 130000 },
-            { id: 21, name: "MPPT Charge Controller 30A", price: 80000 },
-            { id: 22, name: "MPPT Charge Controller 40A", price: 100000 },
-            { id: 23, name: "MPPT Charge Controller 60A", price: 150000 },
-            { id: 24, name: "MPPT Charge Controller 80A", price: 230000 },
-            { id: 25, name: "MPPT Charge Controller 100A", price: 260000 },
-            { id: 26, name: "Solar Street Light 100W", price: 120000 },
-            { id: 27, name: "Solar Street Light 200W", price: 200000 },
-            { id: 28, name: "Solar Street Light 300W", price: 250000 }
+            { id: 1, name: "1kVA Inverter", description: "A reliable inverter for small homes.", price: 140000 },
+            { id: 2, name: "1.5kVA Inverter", description: "Great for powering appliances.", price: 180000 },
+            { id: 3, name: "2kVA Inverter", description: "Suitable for medium-sized homes.", price: 230000 },
+            { id: 4, name: "2.5kVA Inverter", description: "High-performance inverter.", price: 290000 },
         ];
 
-
-        const cart = new Map(); // Use Map to track products and their quantities
+        const cart = new Map();
         const productContainer = document.getElementById("productContainer");
         const searchInput = document.getElementById("searchInput");
         const cartElement = document.getElementById("cart");
         const totalPriceElement = document.getElementById("total-price");
 
-        // Render Products Dynamically
         function displayProducts(items) {
-            productContainer.innerHTML = ""; // Clear the product container
+            productContainer.innerHTML = "";
             items.forEach(product => {
                 const productDiv = document.createElement("div");
                 productDiv.className = "product";
 
-                // Product image (placeholder)
+                // Header section (image, name, description)
+                const productHeader = document.createElement("div");
+                productHeader.className = "product-header";
+
                 const img = document.createElement("img");
-                img.src = "https://via.placeholder.com/80"; // Placeholder image
+                img.src = "https://via.placeholder.com/150";
                 img.alt = product.name;
 
-                // Product details
                 const productDetails = document.createElement("div");
-                const productName = document.createElement("h3");
-                productName.textContent = product.name;
-                const productPrice = document.createElement("p");
-                productPrice.textContent = `Price: ₦${product.price.toLocaleString()}`;
-                productDetails.append(productName, productPrice);
+                productDetails.className = "product-details";
 
-                // Add-to-Cart button
+                const productName = document.createElement("h3");
+                productName.className = "product-name";
+                productName.textContent = product.name;
+
+                const productDescription = document.createElement("p");
+                productDescription.className = "product-description";
+                productDescription.textContent = product.description;
+
+                productDetails.append(productName, productDescription);
+                productHeader.append(img, productDetails);
+
+                // Footer section (price and Add to Cart button)
+                const productFooter = document.createElement("div");
+                productFooter.className = "product-footer";
+
+                const productPrice = document.createElement("p");
+                productPrice.className = "product-price";
+                productPrice.textContent = `Price: ₦${product.price.toLocaleString()}`;
+
                 const addToCartBtn = document.createElement("button");
                 addToCartBtn.className = "cart-btn";
                 addToCartBtn.textContent = "Add to Cart";
                 addToCartBtn.onclick = () => addToCart(product);
-                if (cart.has(product.id)) addToCartBtn.disabled = true; // Disable if already in cart
+                if (cart.has(product.id)) addToCartBtn.disabled = true;
 
-                productDiv.append(img, productDetails, addToCartBtn);
+                productFooter.append(productPrice, addToCartBtn);
+
+                productDiv.append(productHeader, productFooter);
                 productContainer.appendChild(productDiv);
             });
         }
 
-        // Add to Cart
         function addToCart(product) {
             if (!cart.has(product.id)) {
                 cart.set(product.id, { ...product, quantity: 1 });
             }
             renderCart();
-            displayProducts(products); // Refresh product list to disable buttons
+            displayProducts(products);
         }
 
-        // Render Cart
         function renderCart() {
-            cartElement.innerHTML = ""; // Clear cart items
+            cartElement.innerHTML = "";
             let totalPrice = 0;
 
             cart.forEach(item => {
                 const cartItem = document.createElement("li");
                 cartItem.textContent = `${item.name} - ₦${item.price.toLocaleString()} (Qty: ${item.quantity})`;
 
-                // Remove button
                 const removeBtn = document.createElement("button");
                 removeBtn.textContent = "Remove";
                 removeBtn.style.marginLeft = "10px";
@@ -135,21 +124,18 @@
             totalPriceElement.textContent = `Total: ₦${totalPrice.toLocaleString()}`;
         }
 
-        // Remove from Cart
         function removeFromCart(productId) {
             cart.delete(productId);
             renderCart();
-            displayProducts(products); // Refresh product list to enable buttons
+            displayProducts(products);
         }
 
-        // Search Functionality
         searchInput.addEventListener("input", () => {
             const searchValue = searchInput.value.toLowerCase();
             const filteredProducts = products.filter(product => product.name.toLowerCase().includes(searchValue));
             displayProducts(filteredProducts);
         });
 
-        // Initial Render
         displayProducts(products);
     </script>
 </body>
