--- a/index.html
+++ b/index.html
@@ -99,14 +99,14 @@
     <div class="container-fluid p-0 pb-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="owl-carousel header-carousel position-relative">
             <div class="owl-carousel-item position-relative" data-dot="<img src='img/carousel-1.jpg'>">
-                <img class="img-fluid" src="img/carousel-1.jpg" alt="">
+                <img class="img-fluid" src="img/tasha.jpeg" alt="tasha-solar">
                 <div class="owl-carousel-inner">
                     <div class="container">
                         <div class="row justify-content-start">
                             <div class="col-10 col-lg-8">
                                 <h1 class="display-2 text-white animated slideInDown">Leading the Way in Solar & Renewable Energy Solutions</h1>
-                                <p class="fs-5 fw-medium text-white mb-4 pb-3">We provide cutting-edge solar energy systems, designed to meet the growing demand for sustainable energy solutions. Power your home and business with clean, efficient, and reliable solar power.</p>
-                                <a href="" class="btn btn-primary rounded-pill py-3 px-5 animated slideInLeft">Learn More</a>
+                                <p class="fs-5 fw-medium text-white mb-4 pb-3">We provide cutting-edge solutions to Power your home and business with clean, efficient, and reliable solar power.</p>
+                                <a href="" class="btn btn-primary rounded-pill py-3 px-5 animated slideInLeft">Get a Quote Now</a>
                             </div>
                         </div>
                     </div>
@@ -118,8 +118,8 @@
                     <div class="container">
                         <div class="row justify-content-start">
                             <div class="col-10 col-lg-8">
-                                <h1 class="display-2 text-white animated slideInDown">Empowering Your Future with Solar Technology</h1>
-                                <p class="fs-5 fw-medium text-white mb-4 pb-3">Harness the power of the sun with our innovative solar systems. Our solutions are designed to reduce energy costs and minimize environmental impact, helping you make a sustainable choice for the future.</p>
+                                <h1 class="display-2 text-white animated slideInDown">Harness the power of the Sun</h1>
+                                <p class="fs-5 fw-medium text-white mb-4 pb-3">Reducing your energy cost with our innovative Solar Power Systems.</p>
                                 <a href="" class="btn btn-primary rounded-pill py-3 px-5 animated slideInLeft">Discover More</a>
                             </div>
                         </div>
@@ -127,13 +127,13 @@
                 </div>
             </div>
             <div class="owl-carousel-item position-relative" data-dot="<img src='img/carousel-3.jpg'>">
-                <img class="img-fluid" src="img/carousel-3.jpg" alt="">
+                <img class="img-fluid" src="img/solar-streetlight.jpg" alt="">
                 <div class="owl-carousel-inner">
                     <div class="container">
                         <div class="row justify-content-start">
                             <div class="col-10 col-lg-8">
                                 <h1 class="display-2 text-white animated slideInDown">Your Trusted Partner in Solar Solutions</h1>
-                                <p class="fs-5 fw-medium text-white mb-4 pb-3">We specialize in delivering customized solar power solutions, ensuring that each installation meets your unique needs. Experience the future of energy with our reliable solar systems.</p>
+                                <p class="fs-5 fw-medium text-white mb-4 pb-3">Lightening up our homes and streets with various Solar Lights</p>
                                 <a href="" class="btn btn-primary rounded-pill py-3 px-5 animated slideInLeft">Get Started</a>
                             </div>
                         </div>
@@ -143,47 +143,6 @@
         </div>
     </div>
 <!-- Carousel End -->
-
-    <!-- Carousel Start -->
-    <div id="carouselExampleIndicators" class="carousel slide carousel-fade" data-bs-ride="carousel">
-        <div class="carousel-indicators">
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-        </div>
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="img/solar-inverter-1.jpg" class="d-block w-100" alt="Solar Panel System">
-                <div class="carousel-caption d-none d-md-block">
-                    <h5>Reliable Solar Energy Solutions</h5>
-                    <p>Empowering your home and business with sustainable energy.</p>
-                </div>
-            </div>
-            <div class="carousel-item">
-                <img src="img/solar-inverter-2.jpg" class="d-block w-100" alt="Solar Inverter Installation">
-                <div class="carousel-caption d-none d-md-block">
-                    <h5>Efficient and Affordable Inverters</h5>
-                    <p>Get the best performance with our advanced solar inverter systems.</p>
-                </div>
-            </div>
-            <div class="carousel-item">
-                <img src="img/solar-inverter-3.jpg" class="d-block w-100" alt="Solar Panels in Action">
-                <div class="carousel-caption d-none d-md-block">
-                    <h5>Transforming Solar Power into Savings</h5>
-                    <p>Harness the power of the sun and reduce your energy bills.</p>
-                </div>
-            </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-        </button>
-    </div>
-    <!-- Carousel End -->
 
     <!-- Feature Start -->
     <div class="container-xxl py-5" id="feature">
